--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,14 @@
 [x-cloak] {
     display: none;
 }
+
+@layer base {
+    ::-webkit-scrollbar {
+        width: 4px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        border-radius: 20px;
+        background: #7e7e7e5f;
+    }
+}
